--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+  <title>Phaser Game</title>
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
   </style>
 </head>
